--- a/hunt/app/views/layouts/application.html.erb
+++ b/hunt/app/views/layouts/application.html.erb
@@ -19,6 +19,12 @@
   </head>
 
   <body>
-    <%= yield %>
+    <header>
+      <%= render partial: 'shared/navbar' %>
+    </header>
+
+    <main class='container mt-4'>
+      <%= yield %>
+    </main>
   </body>
 </html>
