removed string concatenation

--- a/hunt/app/views/animals/index.html.erb
+++ b/hunt/app/views/animals/index.html.erb
@@ -7,13 +7,13 @@
     <div class="container">
       <div class="row">
         <div class="col-sm">
-          <%='Name: '+animal.name %>
+          Name: <%=animal.name %>
         </div>
         <div class="col-sm">
-          <%='State: '+animal.state%>
+          State: <%=animal.state%>
         </div>
         <div class="col-sm">
-          <%= 'Category: '+animal.category %>
+          Category: <%=animal.category %>
         </div>
       </div>
   </div>
