--- a/hunt/app/views/animals/index.html.erb
+++ b/hunt/app/views/animals/index.html.erb
@@ -1,9 +1,10 @@
 <ul>
   <% @animals.each do |animal| %>
+
     <div class="container">
       <div class="row">
         <div class="col-sm">
-          Name: <%=animal.name %>
+          <li>Name: <%= link_to animal.name, animal_path(animal)  %></li>
         </div>
         <div class="col-sm">
           State: <%=animal.state%>
