--- a/hunt/app/views/animals/show.html.erb
+++ b/hunt/app/views/animals/show.html.erb
@@ -1,9 +1,15 @@
 
-<%= link_to '<button type="button" class="btn btn-dark">View all Animals</button>'.html_safe, '/' %>
-<div class="card" style="width: 18rem;">
-  <div class="card-body">
-    <h5 class=><%=@animal.name%></h5>
-    <p class="card-text">Animal: <%=@animal.category%></p>
-    <p class="card-text">State: <%=@animal.state%></p>
+<%= link_to 'View All Animals', animals_path, class: 'btn btn-dark' %>
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <div class="card" style="width: 18rem;">
+        <div class="card-header"><%=@animal.name%></div>
+        <div class="card-body">
+          <p class="card-text">Category: <%=@animal.category%></p>
+          <p class="card-text">State: <%=@animal.state%></p>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
