--- a/hunt/app/views/animals/index.html.erb
+++ b/hunt/app/views/animals/index.html.erb
@@ -1,4 +1,5 @@
 <ul>
+  <%= link_to 'New Animal', new_animal_path, class: 'btn btn-dark' %>
   <% @animals.each do |animal| %>
 
     <div class="container">
