--- a/hunt/app/views/animals/new.html.erb
+++ b/hunt/app/views/animals/new.html.erb
@@ -1,2 +1,21 @@
-<h1>Animals#new</h1>
-<p>Find me in app/views/animals/new.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <div class="card" >
+        <h5 class="card-header">New Animal</h5>
+        <div class="card-body">
+          <%= simple_form_for @animal, url: animals_path do |f| %> 
+            <%= f.error_notification %>
+
+            <%= f.input :name %>
+            <%= f.input :state, collection: Animal::STATES %>
+            <%= f.input :category, collection: Animal::CATEGORIES %>
+
+            <%= f.button :submit, "Create New Animal", class: "btn btn-dark" %>
+            <%=  link_to 'Cancel', animals_path, class: " btn btn-outline-secondary" %>
+          <% end %>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
