--- a/hunt/app/views/animals/index.html.erb
+++ b/hunt/app/views/animals/index.html.erb
@@ -1,23 +1,25 @@
-<ul>
-
-  <div class="container">
-    <%= link_to 'New Animal', new_animal_path, class: 'btn btn-dark' %>
-<table class="table table-hover">
-  <thead class="thead-dark">
-    <tr>
-      <th scope="col">Name</th>
-      <th scope="col">State</th>
-      <th scope="col">Category</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @animals.each do |animal| %>
-    <tr>
-      <td><%= link_to animal.name, animal_path(animal)%></td>
-      <td><%=animal.state%></td>
-      <td><%=animal.category%></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-</ul>
+ <div class="container">
+   <div class="row">
+     <div class="col">
+       <%= link_to 'New Animal', new_animal_path, class: 'btn btn-dark' %>
+       <table class="table table-hover mt-2">
+          <thead class="thead-dark">
+            <tr>
+              <th scope="col">Name</th>
+              <th scope="col">State</th>
+              <th scope="col">Category</th>
+            </tr>
+          </thead>
+          <tbody>
+            <% @animals.each do |animal| %>
+              <tr>
+              <td><%= link_to animal.name, animal_path(animal)%></td>
+              <td><%=animal.state%></td>
+              <td><%=animal.category%></td>
+              </tr>
+            <% end %>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
