Fixed submit button

--- a/hunt/app/views/animals/new.html.erb
+++ b/hunt/app/views/animals/new.html.erb
@@ -11,7 +11,7 @@
               <%= f.input :state, collection:Animal::STATES, required: true, error: "State can't be blank"%>
               <%= f.input :category, collection: Animal::CATEGORIES, required: true, error: "Category can't be blank"%>
 
-              Create an Animal<%=f.submit class: 'btn btn-dark'%>
+              <%=f.submit class: 'btn btn-dark'%>
               <%= link_to 'Cancel', animals_path, class: 'btn btn-light' %>
             <% end %>
             
