Added new animal page

--- a/hunt/app/assets/stylesheets/animals.scss
+++ b/hunt/app/assets/stylesheets/animals.scss
@@ -1,3 +1,13 @@
 // Place all the styles related to the animals controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+.table-hover {
+  table-layout: fixed;
+
+  td {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+
+}
