--- a/hunt/app/views/animals/edit.html.erb
+++ b/hunt/app/views/animals/edit.html.erb
@@ -1,2 +1,13 @@
-<h1>Animals#edit</h1>
-<p>Find me in app/views/animals/edit.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <div class="card">
+        <div class="card-header"><%= 'Edit ' + @animal.name %></div>
+        <div class="card-body">
+          <%= render partial: "form", locals: {post: @animal, cancel_url: animal_path} %>
+
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
