--- a/hunt/app/views/animals/new.html.erb
+++ b/hunt/app/views/animals/new.html.erb
@@ -5,16 +5,8 @@
         <div class="card-header">Create an Animal</div>
           <div class="card-body">
 
-            <%= simple_form_for @animal do |f| %>
-              <%= f.error_notification %>
-              <%= f.input :name, required: true, error: "Name can't be blank" %>
-              <%= f.input :state, collection:Animal::STATES, required: true, error: "State can't be blank"%>
-              <%= f.input :category, collection: Animal::CATEGORIES, required: true, error: "Category can't be blank"%>
+            <%= render partial: "form", locals: {post: @animal, cancel_url: animals_path} %>
 
-              <%=f.submit class: 'btn btn-dark'%>
-              <%= link_to 'Cancel', animals_path, class: 'btn btn-light' %>
-            <% end %>
-            
           </div>
         </div>
       </div>
