--- a/hunt/app/views/animals/show.html.erb
+++ b/hunt/app/views/animals/show.html.erb
@@ -1,15 +1,15 @@
-
-
 <div class="container">
   <div class="row">
     <div class="col">
       <%= link_to 'View All Animals', animals_path, class: 'btn btn-dark' %>
-      <div class="card" style="width: 18rem;">
+      <div class="card mt-2">
         <div class="card-header"><%=@animal.name%></div>
         <div class="card-body">
           <p class="card-text">Category: <%=@animal.category%></p>
           <p class="card-text">State: <%=@animal.state%></p>
+          <%= link_to 'Edit', edit_animal_path, class: 'btn btn-dark' %>
         </div>
+
       </div>
     </div>
   </div>
