--- a/hunt/app/views/animals/edit.html.erb
+++ b/hunt/app/views/animals/edit.html.erb
@@ -1,2 +1,23 @@
-<h1>Animals#edit</h1>
-<p>Find me in app/views/animals/edit.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <div class="card">
+        <div class="card-header">Edit <%=@animal.name%></div>
+          <div class="card-body">
+
+            <%= simple_form_for @animal do |f| %>
+              <%= f.error_notification %>
+              <%= f.input :name, placeholder:@animal.name, required: true, error: "Name can't be blank" %>
+              <%= f.input :state, placeholder:@animal.state, collection:Animal::STATES, required: true, error: "State can't be blank"%>
+              <%= f.input :category, placeholder:@animal.category, collection: Animal::CATEGORIES, required: true, error: "Category can't be blank"%>
+              <%= f.submit class: 'btn btn-dark'%>
+              <%= link_to 'Cancel', animal_path(@animal), class: 'btn btn-light' %>
+            <% end %>
+
+
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
