--- a/hunt/app/views/animals/show.html.erb
+++ b/hunt/app/views/animals/show.html.erb
@@ -4,12 +4,20 @@
   <div class="row">
     <div class="col">
       <%= link_to 'View All Animals', animals_path, class: 'btn btn-dark' %>
-      <div class="card" style="width: 18rem;">
+      <div class="card">
         <div class="card-header"><%=@animal.name%></div>
         <div class="card-body">
-          <p class="card-text">Category: <%=@animal.category%></p>
+
+
           <p class="card-text">State: <%=@animal.state%></p>
+
+
+          <p class="card-text">Category: <%=@animal.category%></p>
+
+
+          <%= link_to 'Edit', edit_animal_path(@animal), class: 'btn btn-dark' %>
         </div>
+
       </div>
     </div>
   </div>
