--- a/hunt/app/views/animals/show.html.erb
+++ b/hunt/app/views/animals/show.html.erb
@@ -3,13 +3,20 @@
     <div class="col">
       <%= link_to 'View All Animals', animals_path, class: 'btn btn-dark' %>
       <div class="card mt-2">
-        <div class="card-header"><%=@animal.name%></div>
+        <div class="card-header">
+          <h4 class="card-title">
+            <%=@animal.name%>
+          </h4>
+        </div>
         <div class="card-body">
           <p class="card-text">Category: <%=@animal.category%></p>
           <p class="card-text">State: <%=@animal.state%></p>
-          <%= link_to 'Edit', edit_animal_path, class: 'btn btn-dark' %>
+          <div class="float-right">
+            <%= link_to 'Edit', edit_animal_path, class: 'btn btn-dark' %>
+            <%= link_to 'Destroy', animal_path(@animal), method: :delete,
+                data: { confirm: 'Are you sure you want to delete this animal?' }, class: 'btn btn-danger' %>
+          </div>
         </div>
-
       </div>
     </div>
   </div>
