--- a/hunt/app/views/animals/edit.html.erb
+++ b/hunt/app/views/animals/edit.html.erb
@@ -2,10 +2,13 @@
   <div class="row">
     <div class="col">
       <div class="card">
-        <div class="card-header"><%= 'Edit ' + @animal.name %></div>
+        <div class="card-header">
+          <h4 class="card-title">
+            <%= 'Edit ' + @animal.name %>
+          </h4>
+        </div>
         <div class="card-body">
           <%= render partial: "form", locals: {cancel_url: animal_path(@animal)} %>
-
         </div>
       </div>
     </div>
