--- a/hunt/app/views/animals/new.html.erb
+++ b/hunt/app/views/animals/new.html.erb
@@ -2,11 +2,13 @@
   <div class="row">
     <div class="col">
       <div class="card">
-        <div class="card-header">Create an Animal</div>
+        <div class="card-header">
+          <h4 class="card-title">
+            Create an Animal
+          </h4>
+        </div>
           <div class="card-body">
-
             <%= render partial: "form", locals: {cancel_url: animals_path} %>
-
           </div>
         </div>
       </div>
