--- a/hunt/app/views/animals/show.html.erb
+++ b/hunt/app/views/animals/show.html.erb
@@ -11,10 +11,9 @@
         <div class="card-body">
           <p class="card-text">Category: <%=@animal.category%></p>
           <p class="card-text">State: <%=@animal.state%></p>
-          <div class="float-right">
-            <%= link_to 'Edit', edit_animal_path, class: 'btn btn-dark' %>
-            <%= link_to 'Destroy', animal_path(@animal), method: :delete,
-                data: { confirm: 'Are you sure you want to delete this animal?' }, class: 'btn btn-danger' %>
+          <div class="d-flex justify-content-end">
+            <%= link_to 'Edit', edit_animal_path, class: 'btn btn-dark mr-2' %>
+            <%= link_to 'Delete', animal_path(@animal), data: { confirm: 'Are you sure you want to delete this animal?' }, method: :delete, class: 'btn btn-danger' %>
           </div>
         </div>
       </div>
