Delete Feature added

--- a/hunt/app/views/animals/show.html.erb
+++ b/hunt/app/views/animals/show.html.erb
@@ -3,15 +3,22 @@
     <div class="col">
       <%= link_to 'View All Animals', animals_path, class: 'btn btn-dark' %>
       <div class="card mt-2">
-        <div class="card-header"><%=@animal.name%></div>
+        <div class="card-header"><h5><strong><%=@animal.name%></strong></h5></div>
         <div class="card-body">
 
 
-          <p class="card-text">State: <%=@animal.state%></p>
-          <%= link_to 'Edit', edit_animal_path, class: 'btn btn-dark' %>
-        </div>
 
+          <p class="card-text">State: <%=@animal.state%></p>
+          <p class="card-text">Category: <%=@animal.category%></p>
+
+
+
+          <div class="d-flex justify-content-end">
+            <%= link_to 'Edit', edit_animal_path, class: 'btn btn-dark mr-2' %>
+            <%= link_to 'Delete', animal_path(@animal), data: { confirm: 'Are you sure you want to delete this animal?' }, method: :delete, class: 'btn btn-danger' %>
+          </div>
+        </div>
       </div>
     </div>
   </div>
-</div>
+  </div>
