--- a/hunt/app/views/animals/edit.html.erb
+++ b/hunt/app/views/animals/edit.html.erb
@@ -2,10 +2,9 @@
   <div class="row">
     <div class="col">
       <div class="card">
-        <div class="card-header"><%= 'Edit ' + @animal.name %></div>
+        <div class="card-header"><b><%= 'Edit ' + @animal.name %></b></div>
         <div class="card-body">
           <%= render partial: "form", locals: {cancel_url: animal_path} %>
-
         </div>
       </div>
     </div>
