--- a/hunt/app/assets/stylesheets/animals.scss
+++ b/hunt/app/assets/stylesheets/animals.scss
@@ -7,6 +7,11 @@
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+  }
+}
+
+.table-clickable{
+  td{
     cursor: pointer
   }
 }
