--- a/hunt/app/views/animals/index.html.erb
+++ b/hunt/app/views/animals/index.html.erb
@@ -2,7 +2,7 @@
    <div class="row">
      <div class="col">
        <%= link_to 'New Animal', new_animal_path, class: 'btn btn-dark' %>
-       <table class="table table-hover mt-2">
+       <table class="table table-hover mt-2 table-clickable">
           <thead class="thead-dark">
             <tr>
               <th scope="col">Name</th>
