--- a/hunt/app/views/animals/index.html.erb
+++ b/hunt/app/views/animals/index.html.erb
@@ -2,24 +2,55 @@
    <div class="row">
      <div class="col">
        <%= link_to 'New Animal', new_animal_path, class: 'btn btn-dark' %>
-       <table class="table table-hover mt-2">
-          <thead class="thead-dark">
-            <tr>
-              <th scope="col">Name</th>
-              <th scope="col">State</th>
-              <th scope="col">Category</th>
-            </tr>
-          </thead>
-          <tbody>
-            <% @animals.each do |animal| %>
-              <tr>
-                <td><%= link_to animal.name, animal_path(animal)%></td>
-                <td><%=animal.state%></td>
-                <td><%=animal.category%></td>
-              </tr>
-            <% end %>
-          </tbody>
-        </table>
+
+         <div class="card-header mt-2">
+           <%= simple_form_for :search, url: animals_path, method: "GET" do |f| %>
+
+             <div class="row">
+               <div class="col">
+                 <%= f.input :name, input_html: { value: params.dig(:search, :name)}, required: false %>
+               </div>
+
+               <div class="col">
+                 <%= f.input :state, collection: Animal::STATES, selected: params.dig(:search, :state) , required: false, include_blank: true%>
+              </div>
+
+               <div class="col">
+                 <%= f.input :category, collection: Animal::CATEGORIES, selected: params.dig(:search, :category) , required: false, include_blank: true%>
+               </div>
+             </div>
+
+             <div class="d-flex justify-content-end">
+                <%= link_to "Reset", root_path, class: "btn btn-light mr-1" %>
+                <%= f.submit "Search", class: "btn btn-dark" %>
+             </div>
+
+           <% end %>
+         </div>
+
+       </div>
+     </div>
+
+       <div class="row">
+         <div class="col">
+           <table class="table table-hover mt-2">
+             <thead class="thead-dark">
+               <tr>
+                 <th scope="col">Name</th>
+                 <th scope="col">State</th>
+                 <th scope="col">Category</th>
+               </tr>
+             </thead>
+             <tbody>
+               <% @animals.each do |animal| %>
+               <tr>
+                 <td><%= link_to animal.name, animal_path(animal)%></td>
+                 <td><%= animal.state %></td>
+                 <td><%= animal.category %></td>
+               </tr>
+              <% end %>
+            </tbody>
+          </table>
+         </div>
       </div>
     </div>
-  </div>
