--- a/hunt/app/views/shared/_navbar.html.erb
+++ b/hunt/app/views/shared/_navbar.html.erb
@@ -10,6 +10,9 @@
             <li class="nav-item">
                 <%= link_to 'Home', '/', class: 'nav-link'%>
             </li>
+            <li class="nav-item">
+                <%= link_to 'Ramya', '/ramya', class: 'nav-link'%>
+            </li>
         </ul>
     </div>
   </div>
