--- a/hunt/app/views/shared/_navbar.html.erb
+++ b/hunt/app/views/shared/_navbar.html.erb
@@ -13,6 +13,9 @@
             <li class="nav-item">
                 <%= link_to 'Ramya', '/ramya', class: 'nav-link'%>
             </li>
+            <li class="nav-item">
+                <%= link_to "Zirou", "/zirou", class: "nav-link" %>
+            </li>
         </ul>
     </div>
   </div>
