--- a/hunt/app/views/animals/index.html.erb
+++ b/hunt/app/views/animals/index.html.erb
@@ -38,6 +38,7 @@
             <th scope="col">Name</th>
             <th scope="col">State</th>
             <th scope="col">Category</th>
+            <th scope="col">Season</th>
           </tr>
         </thead>
         <tbody>
@@ -46,6 +47,12 @@
               <td><%=animal.name%></td>
               <td><%=animal.state%></td>
               <td><%=animal.category%></td>
+              <td>
+                <%= if animal.season_open.present? && animal.season_close.present?
+                  animal.season_open.strftime('%b %d %Y') + " - " + animal.season_close.strftime('%b %d %Y')
+                end %>
+              </td>
+
             </tr>
           <% end %>
         </tbody>
@@ -59,4 +66,3 @@
    window.location.assign(linkToAnimal);
  }
 </script>
-
