--- a/hunt/app/views/animals/show.html.erb
+++ b/hunt/app/views/animals/show.html.erb
@@ -10,9 +10,11 @@
 
           <p class="card-text">State: <%=@animal.state%></p>
           <p class="card-text">Category: <%=@animal.category%></p>
-          <p class="card-text">Season:
-          <%= if @animal.season_open.present? && @animal.season_close.present?
-            @animal.season_open.strftime('%b %d %Y') + " - " + @animal.season_close.strftime('%b %d %Y')
+          <p class="card-text">
+            <%= if @animal.season_open&.strftime('%b %d %Y')
+                @animal.season_open&.strftime('%b %d %Y')&.prepend("Season: ") + @animal.season_close&.strftime('%b %d %Y')&.prepend(" - ").to_s
+              else
+                @animal.season_close&.strftime('%b %d %Y')&.prepend("Season: ")&.to_str
             end %>
           <p class="card-text">Description: <%= @animal.description%><p>
 
