--- a/hunt/app/views/shared/_navbar.html.erb
+++ b/hunt/app/views/shared/_navbar.html.erb
@@ -16,6 +16,9 @@
             <li class="nav-item">
                 <%= link_to "Zirou", "/zirou", class: "nav-link" %>
             </li>
+            <li class="nav-item">
+                <%= link_to "Mabel", "/mabel", class: "nav-link" %>
+            </li>
         </ul>
     </div>
   </div>
